common-applications/infra-test-cluster/hk/openubmc-robot/robot-hook-dispatcher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: robot-hook-dispatcher-service
  namespace: robot-openubmc
spec:
  ports:
  - name: http-port
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: robot-hook-dispatcher
  type: ClusterIP
